# MPS-Basic

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  License  README.md  compile_commands.json  loader.cpp  make_input.cpp  mps.c  mps.cpp  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-cmake.yml  build-linux-mac.yml  build-windows.yml  calc-hydrostatic.yml  clang-tidy-review.yml  doxygen-pages.yml  format.yml  linter.yml  reviewdog_clang-tidy.yml
ci/: put_image_on_pr.py  pyimgur.py  upload_image.py  visualize_vtk.py
docs/: coding_techniques.md  contributing.md  execution.md  header.html  input-output.md  mainpage.md  settings.md
docs/building_environment/: building_environment.md  linux.md  mac.md  windows.md
docs/improved_algorithms/: explicit.md  improved_algorithms.md  pressure_calculation.md  surface_detection.md
doxygen/html/: _form0_dark_tmp.ps  _form0_tmp.epsi  _form0_tmp.ps  _markdown.html  annotated.html  annotated_dup.js  bucket_8hpp.html  bucket_8hpp.js  bucket_8hpp__dep__incl.map  bucket_8hpp__dep__incl.md5  bucket_8hpp__incl.map  bucket_8hpp__incl.md5  bucket_8hpp_source.html  class_bucket-members.html  class_bucket.html  class_bucket.js  class_bucket__coll__graph.map  class_bucket__coll__graph.md5  class_bucket_a814966faf6c36767fe6b08ab0441715e_icgraph.map  class_bucket_a814966faf6c36767fe6b08ab0441715e_icgraph.md5  class_bucket_aee5671d48e069137954edfccc0611b80_icgraph.map  class_bucket_aee5671d48e069137954edfccc0611b80_icgraph.md5  class_domain-members.html  class_domain.html  class_domain.js  class_domain__coll__graph.map  class_domain__coll__graph.md5  class_loader-members.html  class_loader.html  class_loader.js  class_loader_a07b29f07a52384358c24bf6398950da9_icgraph.map  class_loader_a07b29f07a52384358c24bf6398950da9_icgraph.md5  class_loader_a5edd4cd4cecc1077dacf543835c9493d_cgraph.map  class_loader_a5edd4cd4cecc1077dacf543835c9493d_cgraph.md5  class_loader_a5edd4cd4cecc1077dacf543835c9493d_icgraph.map  class_loader_a5edd4cd4cecc1077dacf543835c9493d_icgraph.md5  class_loader_afebd7f3d342c12f11e7741e9cf30982f_icgraph.map  class_loader_afebd7f3d342c12f11e7741e9cf30982f_icgraph.md5  class_m_p_s-members.html  class_m_p_s.html  (+382 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  (+83 more)
doxygen/latex/: _markdown.tex  annotated.tex  bucket_8hpp.tex  bucket_8hpp__dep__incl.md5  bucket_8hpp__incl.md5  bucket_8hpp_source.tex  class_bucket.tex  class_bucket_a814966faf6c36767fe6b08ab0441715e_icgraph.md5  class_bucket_aee5671d48e069137954edfccc0611b80_icgraph.md5  class_domain.tex  class_loader.tex  class_loader_a07b29f07a52384358c24bf6398950da9_icgraph.md5  class_loader_a5edd4cd4cecc1077dacf543835c9493d_cgraph.md5  class_loader_a5edd4cd4cecc1077dacf543835c9493d_icgraph.md5  class_loader_afebd7f3d342c12f11e7741e9cf30982f_icgraph.md5  class_m_p_s.tex  class_m_p_s__coll__graph.md5  class_m_p_s_a11655a6dd010f2aafb7fbadec69a7bd8_icgraph.md5  class_m_p_s_a14af7aa9a9b12e69573a345b6bd9e2fc_cgraph.md5  class_m_p_s_a14af7aa9a9b12e69573a345b6bd9e2fc_icgraph.md5  class_m_p_s_a1aef09dfefb6bed3722f7fab70036020_cgraph.md5  class_m_p_s_a1aef09dfefb6bed3722f7fab70036020_icgraph.md5  class_m_p_s_a2c84df62724f22dd2d3f2379ae0c7238_icgraph.md5  class_m_p_s_a3cfe127146bc99fa5c01aa7645435532_cgraph.md5  class_m_p_s_a3cfe127146bc99fa5c01aa7645435532_icgraph.md5  class_m_p_s_a453d54aac9444a03f4eb0e5669c47ecc_cgraph.md5  class_m_p_s_a453d54aac9444a03f4eb0e5669c47ecc_icgraph.md5  class_m_p_s_a611ebb97cc77c13aada5bfd2e5cfad4c_icgraph.md5  class_m_p_s_a70a3fe360f32d958a94bf0f4ee771e23_icgraph.md5  class_m_p_s_a81e9cd20a573658ffcf48745c4ee9fb0_icgraph.md5  class_m_p_s_a82b98cfbec3d44a835a49e7cbf450c81_cgraph.md5  class_m_p_s_a82b98cfbec3d44a835a49e7cbf450c81_icgraph.md5  class_m_p_s_a94e40c9d47fababe9746085209882b98_icgraph.md5  class_m_p_s_a9c368cb50383581f4eef311bca1c513a_icgraph.md5  class_m_p_s_a9ef1206148404de5ddc7e1eaf84ce417_cgraph.md5  class_m_p_s_a9ef1206148404de5ddc7e1eaf84ce417_icgraph.md5  class_m_p_s_ac08551eabe3b8f90a3bae8b036e028ca_icgraph.md5  class_m_p_s_acb3466be30f7205c48777f22fd14b2f2_cgraph.md5  class_m_p_s_acb3466be30f7205c48777f22fd14b2f2_icgraph.md5  class_m_p_s_ad5bb5f20c065ff76079498324156ecca_cgraph.md5  (+106 more)
generator/: CMakeLists.txt  config_loader.hpp  generate_dambreak.cpp  generate_hydrostatic.cpp  generate_hydrostatic.py
generator/generator_src/: generator_dialogue.cpp  generator_dialogue.hpp
input/: CMakeLists.txt  input.domain  input.yml  make_input.cpp  settings.yml
input/dambreak/: input.csv  input.prof  input.vtu  settings.yml
input/hydrostatic/: input.csv  input.prof  input.vtu  settings.yml
input/multiphase/: input.csv  settings.yml
result/dambreak/: settings.yml
scripts/: linux.sh  prof_to_csv.sh  runner.ps1  runner.sh  safe_runner.sh  windows.ps1
src/: bucket.cpp  bucket.hpp  common.hpp  domain.hpp  input.hpp  loader.cpp  loader.hpp  loader_test.cpp  main.cpp  mps.cpp  mps.hpp  mps_factory.cpp  mps_factory.hpp  neighbor_searcher.cpp  neighbor_searcher.hpp  output.hpp  particle.cpp  particle.h  particle.hpp  particles.cpp  particles.hpp  particles_exporter.cpp  particles_exporter.hpp  pressure_poisson_equation.cpp  pressure_poisson_equation.hpp  refvalues.cpp  refvalues.hpp  saver.cpp  saver.hpp  settings.hpp  simulation.cpp  simulation.hpp  system.hpp  test.dox  weight.cpp  weight.hpp
src/particles_loader/: csv.cpp  csv.hpp  interface.hpp  prof.cpp  prof.hpp  vtu.cpp  vtu.hpp
src/pressure_calculator/: dirichlet_boundary_condition.cpp  dirichlet_boundary_condition.hpp  explicit.cpp  explicit.hpp  implicit.cpp  implicit.hpp  interface.hpp  pressure_poisson_equation.cpp  pressure_poisson_equation.hpp  target_id_map.cpp  target_id_map.hpp  target_ids.hpp
src/surface_detector/: density.cpp  density.hpp  distribution.cpp  distribution.hpp  interface.hpp  number_density.cpp  number_density.hpp
test/: loader_test.cpp  neighbor_searcher_test.cpp  particles_exporter_test.cpp  refvalues_test.cpp  vtu_loader.cpp  weight_test.cpp
(+9 files in other folders)
